--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,14 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "me.hufman.mediabrowserunlocker"
         minSdkVersion 21
@@ -13,6 +19,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+            }
+        }
     }
     buildTypes {
         release {
@@ -23,6 +35,7 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.5"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -30,6 +43,9 @@ dependencies {
     implementation 'androidx.media:media:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     compileOnly 'de.robv.android.xposed:api:82'
 
     testImplementation 'junit:junit:4.12'
@@ -38,4 +54,5 @@ dependencies {
     testImplementation 'com.nhaarman:mockito-kotlin:1.6.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'org.awaitility:awaitility-scala:3.1.5'
 }
