--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,13 @@
         <meta-data
             android:name="xposedminversion"
             android:value="82" />
+
+        <service android:name=".UnlockerService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="me.hufman.mediabrowserunlocker.UnlockerService" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
